feat implementation of update action